k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: Dev
  name: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order
          image: vvspreddy/order-service
          ports:
            - conatinerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            intialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            intialDelaySeconds: 10
