k8s/Service.yaml
apiVersion: v1
kind: Service
metadata: 
  namespace: Dev
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 80
      targetPort: 3000
