k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  namespace: Dev
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 80
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
